pushing junior change

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Ivana</strong>, an upcoming Assosiate Software Engineer with Bank of Americia with a demonstrated history of working working with HTML/CSS, Java Script, NODE JS, and React. </h2>
+								<h2 class="alt">Hi! I'm <strong>Ivana</strong>, an upcoming Junior Software Engineer with Bank of Americia with a demonstrated history of working working with HTML/CSS, Java Script, NODE JS, and React. </h2>
 								<p>I am also proficient with MySql and MongoDB and deploying applications on Heroku and AWS!</p>
 							</header>
 
